# njm_cpp

./: CMakeLists.txt  README.md
cmake/modules/: FindOpenBLAS.cmake  GetGitRevisionDescription.cmake
njm_cpp/: CMakeLists.txt
njm_cpp/include/data/: trapperKeeper.hpp
njm_cpp/include/linalg/: stdVectorAlgebra.hpp
njm_cpp/include/njm_cpp/data/: result.hpp  trapperKeeper.hpp
njm_cpp/include/njm_cpp/fn_approx/: bsplines.hpp
njm_cpp/include/njm_cpp/info/: project.hpp
njm_cpp/include/njm_cpp/linalg/: stdVectorAlgebra.hpp
njm_cpp/include/njm_cpp/optim/: optim.hpp  simPerturb.hpp
njm_cpp/include/njm_cpp/thread/: pool.hpp
njm_cpp/include/njm_cpp/tools/: experiment.hpp  progress.hpp  random.hpp
njm_cpp/include/optim/: optim.hpp  simPerturb.hpp
njm_cpp/include/thread/: pool.hpp
njm_cpp/include/tools/: bitManip.hpp  experiment.hpp  stats.hpp
njm_cpp/src/data/: trapperKeeper.cpp
njm_cpp/src/fn_approx/: bsplines.cpp
njm_cpp/src/info/: project.cpp.in
njm_cpp/src/linalg/: stdVectorAlgebra.cpp
njm_cpp/src/optim/: optim.cpp  simPerturb.cpp
njm_cpp/src/thread/: pool.cpp
njm_cpp/src/tools/: bitManip.cpp  experiment.cpp  random.cpp  stats.cpp
njm_cpp/test/data/: test_trapperKeeper.cpp
njm_cpp/test/linalg/: test_stdVectorAlgebra.cpp
njm_cpp/test/optim/: test_simPerturb.cpp
njm_cpp/test/thread/: test_pool.cpp
njm_cpp/test/tools/: test_bitManip.cpp  test_experiment.cpp  test_progress.cpp  test_random.cpp  test_stats.cpp
src/data/: trapperKeeper.cpp  trapperKeeper.hpp
src/linalg/: utilities.cpp  utilities.hpp
src/optim/: optim.cpp  optim.hpp  simPerturb.cpp  simPerturb.hpp
src/thread/: pool.cpp  pool.hpp
src/tools/: progress.hpp  random.cpp  random.hpp  result.hpp
